# mtg_pynance

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  publish.yml  python-package.yml
acknowledgements/: index.html
api/analysis/: index.html
api/collection/: index.html
api/config/: index.html
api/core/: index.html
api/database/: index.html
api/logger/: index.html
api/retrieval/: index.html
docs/: acknowledgements.md  collection.md  config.md  explanation.md  index.md  installation.md
docs/API/: analysis.md
docs/api/: core.md  database.md  logger.md  retrieval.md
docs/user_guide/: automation.md  collection_analysis.md  csv_file_creation.md  getting_started.md  installation.md  run_file_creation.md
explanation/: index.html
installation/: index.html
src/mtg_pynance/: __init__.py  analysis.py  collection.py  config.py  core.py  database.py  logger.py  retrieval.py  run.py  statistics.py  trial.py
style_sheets/: extra.css
user_guide/automation/: index.html
user_guide/collection_analysis/: index.html
user_guide/csv_file_creation/: index.html
user_guide/run_file_creation/: index.html
